--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="../src/img/logo.webp" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
      
     <title> Villa Container Lodge </title>
